--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,9 +1,8 @@
 .footer{
     background-color: #7a3145;
-    /* padding: 40px 20px; */
+    padding: 40px 0; 
 }
-.footer-container{
-    padding: 0 20px;
+.footer-container{  
     margin: 0 auto;
 }
         
@@ -113,7 +112,7 @@
 @media screen and (min-width: 768px) {
 
 .footer{
-    padding: 32px;
+    padding: 12px 32px;
 }
 
 .icon-logo {
@@ -124,10 +123,6 @@
 .icon-logotext{
     width: 168px;
     height: 15px;
-}
-.footer-container {
-    padding-left: 32px;
-    padding-right: 32px;
 }
 
 .footer-navigation {
@@ -147,12 +142,14 @@
 .footer-menu{
     margin-bottom: 64px;
     gap: 25px;
-    
 }
+
+
 .footer-menu-item{
     font-size: 32px;
     line-height: 32px;
 }
+
 
 .footer-address-list{
     gap: 25px;
@@ -160,6 +157,8 @@
     font-size: 18px;
     margin-bottom: 100px
 }
+
+
 .footer-adress-link{
     font-weight: 600;
     font-size: 18px;
@@ -172,7 +171,7 @@
 @media screen and (min-width: 1280px) {
 
     .footer{
-        padding: 50px 100px;
+        padding: 50px 80px;
     }
     
 
