--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -1,73 +1,75 @@
-<section class="cont-how-it-works container" id="how_it_works.html">
-  <h2 class="hidden-how-it-works">How It Works</h2>
-  <div class="how-it-works">
-    <picture>
-      <source
-        srcset="
-          ./img/how-it-works/how-it-descktop.jpg    1x,
-          ./img/how-it-works/how-it-descktop-x2.jpg 2x
-        "
-        media="(min-width: 1280px)"
-      />
-      <source
-        srcset="
-          ./img/how-it-works/how-it-tablet.jpg    1x,
-          ./img/how-it-works/how-it-tablet-x2.jpg 2x
-        "
-        media="(min-width: 768px)"
-      />
-      <source
-        srcset="
-          ./img/how-it-works/how-it-mobile.jpg    1x,
-          ./img/how-it-works/how-it-mobile-x2.jpg 2x
-        "
-        media="(max-width: 767px)"
-      />
-      <img
-        class="photo-how-it-works"
-        src="./img/img-how-it/how-it-work-photo.jpg"
-        width="335"
-        height="450"
-        alt="how-it-works"
-      />
-    </picture>
-  </div>
-  <div class="description-how-it">
-    <h2 class="tittle-how-it-works">
-      TO ORDER YOUR
-      <span class="span-tittle-how-it">VEGETABLE</span> BASKET, SIMPLY FOLLOW
-      THESE
-      <span class="span-tittle-how-it">EASY STEPS</span>
-    </h2>
-    <p class="paragraph-how-it-works">
-      Our baskets are assembled with care and delivered straight to your
-      doorstep, so you can enjoy the taste of fresh fruit without ever leaving
-      your home.
-    </p>
-    <ol class="list-how-it-works">
-      <li class="list-text-how-it">
-        <div class="number-list-redackt">1</div>
-        <p class="paragraph-list-how-it">
-          Just choose
-          <span class="text-paragraph-how-it">the vegetable</span> you want to
-          order by clicking on the checkboxes next to it.
-        </p>
-      </li>
-      <li class="list-text-how-it">
-        <div class="number-list-redackt-two">2</div>
-        <p class="paragraph-two-list-how-it">
-          Click on <span class="text-paragraph-how-it">the basket</span> and
-          fill out the form.
-        </p>
-      </li>
-      <li class="list-text-how-it">
-        <div class="number-list-redackt-three">3</div>
-        <p class="paragraph-thre-list-how-it">
-          Sit back and relax! Your
-          <span class="text-paragraph-how-it"> fresh vegetables</span> basket
-          will be delivered.
-        </p>
-      </li>
-    </ol>
+<section class="cont-how-it-works" id="how_it_works.html">
+  <div class="how-itttt container">
+    <h2 class="hidden-how-it-works">How It Works</h2>
+    <div class="how-it-works">
+      <picture>
+        <source
+          srcset="
+            ./img/how-it-works/how-it-descktop.jpg    1x,
+            ./img/how-it-works/how-it-descktop-x2.jpg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./img/how-it-works/how-it-tablet.jpg    1x,
+            ./img/how-it-works/how-it-tablet-x2.jpg 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            ./img/how-it-works/how-it-mobile.jpg    1x,
+            ./img/how-it-works/how-it-mobile-x2.jpg 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <img
+          class="photo-how-it-works"
+          src="./img/img-how-it/how-it-work-photo.jpg"
+          width="335"
+          height="450"
+          alt="how-it-works"
+        />
+      </picture>
+    </div>
+    <div class="description-how-it">
+      <h2 class="tittle-how-it-works">
+        TO ORDER YOUR
+        <span class="span-tittle-how-it">VEGETABLE</span> BASKET, SIMPLY FOLLOW
+        THESE
+        <span class="span-tittle-how-it">EASY STEPS</span>
+      </h2>
+      <p class="paragraph-how-it-works">
+        Our baskets are assembled with care and delivered straight to your
+        doorstep, so you can enjoy the taste of fresh fruit without ever leaving
+        your home.
+      </p>
+      <ol class="list-how-it-works">
+        <li class="list-text-how-it">
+          <div class="number-list-redackt">1</div>
+          <p class="paragraph-list-how-it">
+            Just choose
+            <span class="text-paragraph-how-it">the vegetable</span> you want to
+            order by clicking on the checkboxes next to it.
+          </p>
+        </li>
+        <li class="list-text-how-it">
+          <div class="number-list-redackt-two">2</div>
+          <p class="paragraph-two-list-how-it">
+            Click on <span class="text-paragraph-how-it">the basket</span> and
+            fill out the form.
+          </p>
+        </li>
+        <li class="list-text-how-it">
+          <div class="number-list-redackt-three">3</div>
+          <p class="paragraph-thre-list-how-it">
+            Sit back and relax! Your
+            <span class="text-paragraph-how-it"> fresh vegetables</span> basket
+            will be delivered.
+          </p>
+        </li>
+      </ol>
+    </div>
   </div>
 </section>
