--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -34,12 +34,10 @@ button {
   /* width: 640px; */
 }
 .your-order-title {
-  color: #fbfbfb;
-  font-family: 'Inter Tight';
   font-size: 48px;
   font-weight: 600;
   line-height: 1.04;
-  letter-spacing: 0.015em;
+  letter-spacing: -0.015em;
   text-transform: uppercase;
   margin-bottom: 30px;
 }
@@ -63,8 +61,6 @@ button {
 }
 
 .your-order-text {
-  color: #fbfbfb;
-  font-family: 'Inter Tight';
   font-size: 14px;
   line-height: 1.29;
   margin-bottom: 40px;
@@ -99,7 +95,7 @@ button {
 }
 
 .your-order-form-cont {
-  background-color: #fbfbfb;
+    background-color: #FBFBFB;
   border-radius: 30px;
   padding: 40px 20px;
 }
@@ -120,12 +116,11 @@ button {
 }
 .your-order-form-title {
   color: #141414;
-  font-family: 'Inter Tight';
   font-size: 24px;
   font-style: normal;
   font-weight: 600;
   line-height: 1.08;
-  letter-spacing: 0.015em;
+  letter-spacing: -0.015em;
   text-transform: uppercase;
   margin-bottom: 40px;
 }
@@ -145,6 +140,7 @@ button {
 }
 
 .form-container {
+
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -159,15 +155,15 @@ button {
 
 .your-order-input {
   color: #141414;
-  font-family: 'Inter Tight';
   font-size: 14px;
   line-height: 1.29;
-  letter-spacing: 0.02em;
+  letter-spacing: -0.02em;
   border-radius: 30px;
   border: 1px solid rgba(20, 20, 20, 0.2);
   height: 46px;
   padding: 14px 16px;
 }
+
 
 @media screen and (min-width: 768px) {
   .your-order-input {
@@ -177,15 +173,20 @@ button {
     height: 52px;
   }
 }
+.your-order-input:valid {
+  border: 1px solid #3CBC81;}
+
+.your-order-input:invalid {
+  border: 1px solid #E74A3B; }
+
 
 .your-order-textarea {
   width: 100%;
   height: 91px;
   color: #141414;
-  font-family: 'Inter Tight';
   font-size: 14px;
   line-height: 1.29;
-  letter-spacing: 0.02em;
+  letter-spacing: -0.02em;
   border-radius: 15px;
   border: 1px solid rgba(20, 20, 20, 0.2);
   padding: 14px 16px;
@@ -205,13 +206,12 @@ button {
 
 .your-order-button {
   border-radius: 30px;
+color: #FBFBFB;
   background: #576f35;
   padding: 16px 129px;
-  color: #fbfbfb;
-  font-family: 'Inter Tight';
   font-size: 14px;
   line-height: 1.29;
-  letter-spacing: 0.015em;
+  letter-spacing: -0.015em;
   text-transform: uppercase;
   border: none;
 }
@@ -221,7 +221,7 @@ button {
     padding: 16px 191px;
     font-size: 18px;
     line-height: 1.11;
-    letter-spacing: 0.015em;
+    letter-spacing: -0.015em;
   }
 }
 .your-order-img-cont {
@@ -260,12 +260,11 @@ button {
 
 .your-order-img-text {
   color: rgba(251, 251, 251, 0.5);
-  font-family: 'Inter Tight';
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
   line-height: 1.29;
-  letter-spacing: 0.015em;
+  letter-spacing: -0.015em;
   margin-bottom: 14px;
 }
 
@@ -273,7 +272,7 @@ button {
   .your-order-img-text {
     font-size: 18px;
     line-height: 1.11;
-    letter-spacing: 0.015em;
+    letter-spacing: -0.015em;
     margin-bottom: 15px;
   }
 }
@@ -291,17 +290,15 @@ button {
 }
 
 .your-order-link {
-  color: #fbfbfb;
-  font-family: 'Inter Tight';
   font-size: 24px;
   font-weight: 600;
   line-height: 1.08;
-  letter-spacing: 0.015em;
+  letter-spacing: -0.015em;
 }
 @media screen and (min-width: 768px) {
   .your-order-link {
     font-size: 32px;
     line-height: 1;
-    letter-spacing: 0.015em;
+    letter-spacing: -0.015em;
   }
 }
