--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -51,7 +51,8 @@
           <p class="paragraph-list-how-it">
             Just choose
             <span class="text-paragraph-how-it">the vegetable</span> you want to
-            order by clicking on the checkboxes next to it.
+            order by clicking on the checkboxes
+            <span class="text-paragraph-how-it">next to it.</span>
           </p>
         </li>
         <li class="list-text-how-it">
