--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -1,5 +1,5 @@
 <section class="cont-how-it-works" id="how_it_works.html">
-  <div class="how-itttt container">
+  <div class="how-it-works-container container">
     <h2 class="hidden-how-it-works">How It Works</h2>
     <div class="how-it-works">
       <picture>
@@ -33,6 +33,7 @@
         />
       </picture>
     </div>
+
     <div class="description-how-it">
       <h2 class="tittle-how-it-works">
         TO ORDER YOUR
@@ -66,8 +67,8 @@
           <div class="number-list-redackt-three">3</div>
           <p class="paragraph-thre-list-how-it">
             Sit back and relax! Your
-            <span class="text-paragraph-how-it"> fresh vegetables</span> basket
-            will be delivered.
+            <span class="text-paragraph-how-it"> fresh vegetables</span>
+            basket will be delivered.
           </p>
         </li>
       </ol>
