how it works2.22

--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -1,6 +1,6 @@
 <section class="cont-how-it-works" id="how_it_works.html">
   <div class="how-it-works-container container">
-    <h2 class="hidden-how-it-works">How It Works</h2>
+    <h2 class="visually-hidden">How It Works</h2>
     <div class="how-it-works">
       <picture>
         <source
