--- a/src/css/header.css
+++ b/src/css/header.css
@@ -384,14 +384,8 @@
     transition: background-color .3s cubic-bezier(.4, 0, .2, 1)
   }
 
-  button:hover,
-  button:focus {
-    background-color: #fbfbfb;
-    color: #7a3145;
+  .header-btn:hover,
+  .header-btn:focus {
+    background-color: #622133;
   }
-
-  .buttin:active {
-    color: #fbfbfb;
-  }
-
 }
