--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,9 +1,5 @@
 .header {
-  position: absolut;
-  top: 0;
-  right: 0;
-  left: 0;
-  background-color: transparent;
+  background-color: #576F35;
   padding-top: 20px;
 }
 
