--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -160,32 +160,39 @@ button {
 }
 
 .your-order-input {
-  color: #141414;
   font-size: 14px;
   line-height: 1.29;
   letter-spacing: -0.02em;
   outline: none;
   border-radius: 30px;
-  border: 1px solid rgba(20, 20, 20, 0.2);
   height: 46px;
   padding: 14px 16px;
+  border: 1px solid rgba(20, 20, 20, 0.2);
 }
 
-
-.your-order-input:valid {
-  border: 1px solid #3cbc81;
-
+.your-order-input::placeholder {
+  color: #141414;
 }
-.your-order-input:invalid {
-  border: 1px solid #e74a3b;
 
-}
 .your-order-input:focus {
- border: 1px solid #7A3145;
+  border-color: #7a3145;
 }
 
+.your-order-input:not(:placeholder-shown):invalid {
+  border-color: #e74a3b;
+}
 
+.your-order-input:not(:placeholder-shown):valid {
+  border: 1px solid #3cbc81;
+}
 
+.your-order-textarea::placeholder {
+  color: #141414;
+}
+
+.your-order-textarea:focus {
+  border-color: #7a3145;
+}
 
 @media screen and (min-width: 768px) {
   .your-order-input {
