--- a/src/css/header.css
+++ b/src/css/header.css
@@ -181,6 +181,16 @@
     height: 18px;
   }
 
+  .header-logo-left {
+    width: 18px;
+    height: 18px;
+  }
+
+  .header-logo-right {
+    width: 168px;
+    height: 15px;
+  }
+
   .open-menu-icons {
     width: 40px;
     height: 40px;
