--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -1,9 +1,3 @@
-img {
-  display: block;
-  min-width: 100%;
-  height: auto;
-}
-
 button {
   cursor: pointer;
 }
@@ -20,6 +14,7 @@ button {
   .your-order-container {
     padding-top: 100px;
     padding-bottom: 100px;
+    padding: 100px 32px;
   }
 }
 
@@ -30,9 +25,20 @@ button {
 }
 
 .your-order-title-box {
-  display: inline;
-  /* width: 640px; */
+  max-width: 335px;
 }
+
+@media screen and (min-width: 768px) {
+  .your-order-title-box {
+    max-width: 640px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .your-order-title-box {
+    max-width: 751px;
+  }
+}
+
 .your-order-title {
   font-size: 48px;
   font-weight: 600;
@@ -47,12 +53,6 @@ button {
     font-size: 64px;
     line-height: 1;
     margin-bottom: 25px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .your-order-title {
-    max-width: 751px;
   }
 }
 
@@ -90,14 +90,14 @@ button {
 
 @media screen and (min-width: 768px) {
   .your-order-box {
-  gap: 25px;
-}
+    gap: 25px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
   .your-order-box {
     flex-direction: row;
-      gap: 24px;
+    gap: 24px;
   }
 }
 
@@ -204,7 +204,6 @@ button {
   }
 }
 
-
 .your-order-textarea {
   width: 100%;
   height: 91px;
@@ -242,6 +241,7 @@ button {
   display: block;
   margin: 0 auto;
   width: 100%;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
@@ -276,6 +276,9 @@ button {
       no-repeat;
   margin-bottom: 20px;
   border: none;
+  display: block;
+  min-width: 100%;
+  height: auto;
 }
 
 @media screen and (min-width: 768px) {
