--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -11,7 +11,7 @@
   .hero {
     background: linear-gradient(to bottom, rgba(20, 20, 20, 0.2) 0%, rgba(20, 20, 20, 0.2) 100%),
       url(/img/hero/vegetables-mob2x.jpg) no-repeat center bottom/410px;
-    padding: 48px 20px 40px;
+    padding: 48px 0 40px;
     background-color: #576F35;
 
   }
