--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,10 +1,11 @@
 .footer {
     background-color: #7a3145;
-    padding: 40px 0;
+
 }
 
 .footer-container {
     margin: 0 auto;
+    padding: 40px 20px
 }
 
 
@@ -113,8 +114,8 @@
 
 @media screen and (min-width: 768px) {
 
-    .footer {
-        padding: 32px 12px;
+    .footer-container {
+        padding: 32px;
     }
 
     .icon-logo {
@@ -175,8 +176,8 @@
 
 @media screen and (min-width: 1280px) {
 
-    .footer {
-        padding: 50px 80px;
+    .footer-container {
+        padding: 50px 100px;
     }
 
 
